test/expected/explain_ri-c.out
explain int &x
            ^
13: error: reference is not supported in C
